--- a/openshift_deploy/ocd.yaml
+++ b/openshift_deploy/ocd.yaml
@@ -139,6 +139,8 @@ objects:
       git:
         ref: master
         uri: https://github.com/gditrani269/py-client.git
+      sourceSecret:
+        name: githubpusher
       type: Git
     strategy:
       sourceStrategy:
